tests/syntax_error/keyword_int64.jou
def main() -> int:
    int64 = 1  # Error: expected an expression, got the 'int64' keyword
    return 0
